<resources>
    <string name="app_name">KiKiChat</string>
    <string name="accept">接受</string>
    <string name="refuse">拒绝</string>
    <string name="be_accept">已同意</string>
    <string name="be_refuse">已拒绝</string>
    <string name="be_timeout">已过期</string>
    <string name="manager">管理员</string>
    <string name="exit_app_tips">再按一次退出程序</string>
    <string name="dialog_loading">加载中...</string>
    <string name="recommend_contacts">推荐联系人</string>
    <string name="already_new_version_tips">已是最新版本</string>
    <string name="no_install_wx">没有安装微信</string>
    <string name="wechat_loging">正在获取微信授权...</string>
    <string name="register_gift_money">125.50</string>
    <string name="register_gift_money_unit">DPC</string>
    <string name="register_gift_tips">首次登陆，KiKi送您%1$dDPC!</string>
    <string name="click_confirm">点击确认</string>
    <string name="find_password">设置新密码</string>
    <string name="language_cn">简体中文</string>
    <string name="language_en">English</string>
    <string name="language_auto">自动</string>
    <string name="language_traditional">繁體</string>
    <string name="operation_suc">操作成功</string>
    <string name="operation_faill">操作失败</string>
    <string name="language_select">当前选择的语言: %s</string>
    <string name="start_group_chat">发起群聊</string>
    <string name="add_friends">添加朋友</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="wallet">钱包</string>
    <string name="verify_name">实名认证</string>
    <string name="system_setting">系统设置</string>
    <string name="task_center"> 任务中心</string>
    <string name="invite_friend">邀请好友</string>
    <string name="invite_friend_tips">分享会员赠送DPC币</string>
    <string name="register_share">注册分享</string>
    <string name="register_share_tips">注册分享赠送DPC币</string>
    <string name="login_prisent">登录即送</string>
    <string name="login_prisent_tips">登录时长赠送DPC币</string>
    <string name="go_invite">去邀请</string>
    <string name="go_share">去分享</string>
    <string name="received">领取</string>
    <string name="go_login">去登录</string>
    <string name="login_time">登录时长</string>
    <string name="exit_login">退出登录</string>
    <string name="popular_group">热门群</string>
    <string name="find_find">找一找</string>
    <string name="information">资讯</string>
    <string name="discuss_group">贴吧</string>
    <string name="favorite">收藏</string>
    <string name="comment">评论</string>
    <string name="share">分享</string>
    <string name="news">新闻</string>
    <string name="express">快讯</string>
    <string name="good_reception_number">%1$d赞</string>
    <string name="check_more_subject">查看更多专题</string>
    <string name="express_source">快讯来源: %1$s</string>
    <string name="good_news_number">利好 %1$d</string>
    <string name="bad_news_number">利空 %1$d</string>
    <string name="just_now">刚刚</string>
    <string name="one_minutes_ago">1分钟前</string>
    <string name="minutes_ago">%1$d分钟前</string>
    <string name="one_hours_ago">1小时前</string>
    <string name="hours_ago">%1$d小时前</string>
    <string name="days_ago">%1$d天前</string>
    <string name="yesterday"> 昨天</string>
    <string name="search">搜索</string>
    <string name="search_edit">搜索 : </string>
    <string name="new_friend">新朋友</string>
    <string name="new_friend2">新好友</string>
    <string name="create_chat_group">创建群聊</string>
    <string name="search_account">搜索账号</string>
    <string name="search_group">搜索群组功能</string>
    <string name="search_group2">搜索群组</string>
    <string name="search_user2">搜索用户</string>
    <string name="apply_join_group_tips">已经提交申请,等待群主审核通过</string>
    <string name="add_friend_success_tips">已经添加好友成功</string>
    <string name="added">已添加</string>
    <string name="applyed">已申请</string>
    <string name="apply_join_group_error_tips">您已经在该群里</string>
    <string name="read_qr_code_error">无效的二维码,请确认二维码是否是有效的群二维码或者个人信息二维码</string>
    <string name="search_no_result">搜索无结果</string>
    <string name="blink_friend">KiKi好友</string>
    <string name="my_friend">我的好友</string>
    <string name="mine_group">我的群组</string>
    <string name="phone_contacts">手机通讯录</string>
    <string name="invite_contacts">邀请</string>
    <string name="invite_contacts_sms_content">你的好友通过KiKi给你留言啦,赶快注册去查看吧,下载地址:%1$s</string>
    <string name="no_information">暂无会话消息</string>
    <string name="welcome_title">欢迎来到KiKi</string>
    <string name="welcome_title_accent">全球首款社区自治化即时通信平台</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_email">邮箱登录</string>
    <string name="login_telephone">手机登录</string>
    <string name="register_email">邮箱注册</string>
    <string name="register_telephone">手机注册</string>
    <string name="locale_default">中国</string>
    <string name="language_default">简体中文</string>
    <string name="email_verify_code">邮箱验证码</string>
    <string name="telephone_verify_code">手机验证码</string>
    <string name="go_to_login">已有账号，去登录吧</string>
    <string name="go_to_register">还没有账号？去注册吧</string>
    <string name="go_to_register2">账号注册</string>
    <string name="service_rule_tips_login">登录即代表阅读并同意</string>
    <string name="please_input_availd_telephone_or_email">请输入有效的手机号码或者邮箱</string>
    <string name="account_tips">手机号</string>
    <string name="account">账号</string>
    <string name="email_account_tips">邮箱账号</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="password_tips">密码(至少6位)</string>
    <string name="new_password_tips">新密码(至少6位)</string>
    <string name="password_confirm_tips">密码确认(至少6位)</string>
    <string name="apply_password_tips">支付密码(6位)</string>
    <string name="apply_password_confirm_tips">支付密码确认(6位)</string>
    <string name="password_tip_accent">密码</string>
    <string name="image_verify">图形验证码</string>
    <string name="verify_code">验证码</string>
    <string name="msm_verify_code">短信验证码</string>
    <string name="get_msm_verify_code">获取验证码</string>
    <string name="toggle_language">切换语言</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="forgot_password2">忘记密码</string>
    <string name="platform_describe">安全、便捷、高效的社交平台</string>
    <string name="platform_describe_en">Safe, convenient and efficient social platform</string>
    <string name="platform_describe2">全球社交，全球商务</string>
    <string name="platform_describe2_en">GLOBAL SOCIAL,GLOBAL BUSINESS</string>
    <string name="platform_describe3">安全、便捷、高效的通讯工具</string>
    <string name="platform_describe_en3">Safe, efficient and convenient communication tool</string>
    <string name="platform_describe4">琪琪聊  全新上线</string>
    <string name="platform_describe_en4">KikiChat is online</string>
    <string name="service_rule_tips">注册即代表阅读并同意</string>
    <string name="service_rule">服务条款</string>
    <string name="switch_language">切换语言</string>
    <string name="account_error">手机号码无效</string>
    <string name="account_empty_error">账号不能为空</string>
    <string name="password_empty_error">密码不能为空</string>
    <string name="new_password_empty_error">新密码不能为空</string>
    <string name="password_confirm_error">两次输入的密码不一致</string>
    <string name="apply_password_empty_error">支付密码不能为空</string>
    <string name="apply_password_confirm_error">两次输入的支付密码不一致</string>
    <string name="nick_name_empty_error">昵称不能为空</string>
    <string name="verify_code_empty_error">验证码不能为空</string>
    <string name="old_apply_password_empty_error">旧支付密码不能为空</string>
    <string name="new_apply_password_empty_error">新支付密码不能为空</string>
    <string name="set_new_password_success">设置新密码成功</string>
    <string name="wallet_title">K Wallet</string>
    <string name="wallet_title2">Kiki Wallet</string>
    <string name="scan">扫一扫</string>
    <string name="charge_coin">充币</string>
    <string name="withdraw_coin">提币</string>
    <string name="withdraw_coin_record">提币记录</string>
    <string name="withdraw_coin_finish">提币完成</string>
    <string name="blink_service">KiKi服务</string>
    <string name="exchange">兑汇</string>
    <string name="finances">理财</string>
    <string name="bill">账单</string>
    <string name="address">地址</string>
    <string name="input_charge_amount">输入充值金额</string>
    <string name="submit">提交</string>
    <string name="transfer_remark">备注: 为了账户安全,请用户在其他钱包转账时备注ID</string>
    <string name="transfer_tips">提示: 转账时谨慎核对,一旦转入,不可撤回,转账时间视区块链确认时间而定,若有拥堵,请耐心等待。</string>
    <string name="total_assets">总资产折合(BTC)</string>
    <string name="total_assets2">总资产</string>
    <string name="hide_coin_type">隐藏无余额币种</string>
    <string name="balance_available">可用</string>
    <string name="balance_lock">锁定</string>
    <string name="apply">支付</string>
    <string name="goto_exchange">进行兑换</string>
    <string name="developing">即将开放</string>
    <string name="exchange_reference_price">兑换参考价: 0</string>
    <string name="exchange_tips">兑换后24小时内未完成交易将会退回钱包</string>
    <string name="today_exchange_rate">今日汇率</string>
    <string name="currency">币种</string>
    <string name="exchange_rate">汇率</string>
    <string name="day_withdrawal_amount">日提现额度</string>
    <string name="customed_query">自定义查询</string>
    <string name="withdraw_coin_amount">提币额度</string>
    <string name="available_amount">可用额度: </string>
    <string name="actual_arrival_amount">实际到账: </string>
    <string name="processing_fee">, 手续费: </string>
    <string name="at_least_withdraw_amount">单笔提币至少</string>
    <string name="at_most_withdraw_amount">单笔提币最多</string>
    <string name="select_receive_address">请选择收币地址, 或扫码录入</string>
    <string name="withdraw_coin_tips">备注例如My Address#2(选填)</string>
    <string name="withdraw_coin_hint">请输入提币金额</string>
    <string name="withdraw_coin_address">到账地址: </string>
    <string name="withdraw_coin_address_name">地址名称: </string>
    <string name="finance_password">资金密码</string>
    <string name="msg_verify_code">短信验证码</string>
    <string name="withdraw_confirm">确认提现</string>
    <string name="send_verify_code">获取验证码</string>
    <string name="bill_detail">账单详情</string>
    <string name="handing_fee">手续费</string>
    <string name="actual_arrival_money">实际到账</string>
    <string name="remark">备注</string>
    <string name="time">时间</string>
    <string name="select_time">选择时间</string>
    <string name="finish">完成</string>
    <string name="select_by_month">按月选择</string>
    <string name="select_by_day">按日选择</string>
    <string name="verify_password_ing">正在验证密码...</string>
    <string name="red_packet">红包</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_copy">复制</string>
    <string name="common_qrcode_read">二维码识别</string>
    <string name="common_forward">转发</string>
    <string name="common_revoke">撤销</string>
    <string name="common_delete">删除</string>
    <string name="common_save">保存</string>
    <string name="menu_chat_top">置顶聊天</string>
    <string name="menu_cancel_top">取消置顶</string>
    <string name="menu_mark_noread">标为未读</string>
    <string name="menu_mark_read">标为已读</string>
    <string name="menu_delete_chat">删除聊天</string>
    <string name="label_user_oldpassword">旧密码：</string>
    <string name="label_user_newpassword">新密码：</string>
    <string name="label_group_invite">邀请加入</string>
    <string name="label_setting_modify_apply_password">修改支付密码</string>
    <string name="tip_textsize_small">小</string>
    <string name="tip_textsize_normal">标准</string>
    <string name="tip_textsize_big">大</string>
    <string name="tip_textsize_large">特大</string>
    <string name="title_input_tagname">输入标签名字</string>
    <string name="label_modify_name">修改名称</string>
    <string name="label_modify_summary">修改群公告</string>
    <string name="label_modify_group_logo">修改群徽</string>
    <string name="coin_transfer_statement">转账说明</string>
    <string name="coin_transfer_statement_tips">对方可见，最多10个字</string>
    <string name="select_record_type">选择记录类型</string>
    <string name="all">全部</string>
    <string name="withdrawal">提现</string>
    <string name="top_up">充值</string>
</resources>