<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:textColor="@color/tex_color_gray_191919"
        android:text="@string/coin_transfer_statement"
        android:layout_gravity="center_horizontal"
        android:lineSpacingExtra="3dp"
        android:layout_margin="30dp"
        android:textSize="@dimen/text_title" />

    <EditText
        android:id="@+id/input_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/text_title"
        android:background="@null"
        android:hint="@string/coin_transfer_statement_tips"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/leftButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:padding="18dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/common_cancel"
            android:textColor="@color/text_grey" />

        <View
            android:background="@color/list_border"
            android:layout_width="1px"
            android:layout_height="match_parent"/>

        <TextView
            android:layout_weight="1"
            android:id="@+id/rightButton"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:textStyle="bold"
            android:padding="18dp"
            android:text="@string/common_confirm"
            android:textSize="16sp"
            android:textColor="?android:colorAccent" />

    </LinearLayout>

</LinearLayout>