<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@color/textColor"
        android:gravity="center"
        android:text="@string/select_record_type"
        android:textColor="@color/tex_color_gray_333"
        android:textSize="@dimen/text_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:background="@color/color_e4e4e4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/textColor"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="13.3dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="13.3dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_bill_type_back"
                android:gravity="center"
                android:text="@string/all"
                android:textColor="@color/tex_color_gray_333"
                android:textSize="@dimen/text_14sp" />

            <View
                android:layout_width="7dp"
                android:layout_height="match_parent"
                android:background="@color/textColor" />

            <TextView
                android:id="@+id/tv_red"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_bill_type_back"
                android:gravity="center"
                android:text="@string/red_packet"
                android:textColor="@color/tex_color_gray_333"
                android:textSize="@dimen/text_14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="13.3dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="13.3dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_withdrawal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_bill_type_back"
                android:gravity="center"
                android:text="@string/withdrawal"
                android:textColor="@color/tex_color_gray_333"
                android:textSize="@dimen/text_14sp" />

            <View
                android:layout_width="7dp"
                android:layout_height="match_parent"
                android:background="@color/textColor" />

            <TextView
                android:id="@+id/tv_top_up"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/selector_bill_type_back"
                android:gravity="center"
                android:text="@string/top_up"
                android:textColor="@color/tex_color_gray_333"
                android:textSize="@dimen/text_14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="13.3dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/common_cancel"
            android:textColor="@color/tex_color_gray_333"
            android:textSize="@dimen/text_14sp" />

    </LinearLayout>
</LinearLayout>