<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/title_bar_top_shadow" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/item_small"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/tip_textsize_small"
                android:textColor="@color/text_chat_color"
                android:textSize="12sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/item_normal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:checked="true"
                android:text="@string/tip_textsize_normal"
                android:textColor="@color/text_chat_color"
                android:textSize="14sp" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/item_big"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground">

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/tip_textsize_big"
                android:textColor="@color/text_chat_color"
                android:textSize="16sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/item_large"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?selectableItemBackground">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/tip_textsize_large"
                android:textColor="@color/text_chat_color"
                android:textSize="18sp" />
        </FrameLayout>
    </RadioGroup>
</LinearLayout>