<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
    >


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/icon_dialog_tag"
        android:layout_gravity="center_horizontal"
        />

<EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/nameEdit"
        android:padding="6dp"
        android:background="@drawable/dark_edit_background"
        android:maxLines="1"
        android:hint="@string/title_input_tagname"
        android:maxLength="10"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="16sp" />

<View
    android:background="@color/list_border"
    android:layout_width="match_parent"
    android:layout_height="1px"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/leftButton"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:padding="18dp"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/common_cancel"
        android:textColor="@color/text_grey" />

    <View
        android:background="@color/list_border"
        android:layout_width="1px"
        android:layout_height="match_parent"/>

    <TextView
        android:layout_weight="1"
        android:id="@+id/rightButton"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:textStyle="bold"
        android:padding="18dp"
        android:text="@string/common_save"
        android:textSize="16sp"
        android:textColor="?colorAccent" />

</LinearLayout>

</LinearLayout>